tests/type/bad/if_branch_mismatch.hel
foreign io_unit: IO<()>;

x = if (true) { 1 } else { 2.0 };

main = io_unit;
